--- a/Tugas-HTML/Real App UI Component/style.css
+++ b/Tugas-HTML/Real App UI Component/style.css
@@ -2,11 +2,8 @@
   background: #ffffff;
   border: 1px solid #9d9fa4;
   border-radius: 12px;
-  margin-top: 20px;
-  border-radius: 12px;
+  margin-top: 30px;
   padding: 20px;
-  margin-top: 20px;
-  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,8 +20,8 @@
   padding-top: 5px;
   background: #f9f9f9;
   text-align: center;
-  height: 220px;
-  width: 220px;
+  height: 200px;
+  width: 200px;
   border: 1px solid #ddd;
   border-radius: 6px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -57,13 +54,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: small;
 }
+
 
 .avatar img {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  position: relative;
   padding-top: 5px;
 }
 
@@ -101,7 +99,10 @@
   /* flex-end, center, stretch, dll */
   align-items: center;
   text-align: center;
+  flex-wrap: wrap;
+    
 }
+
 
 .fitur {
   font-size: small;
@@ -123,4 +124,5 @@
   padding: 4px 6px;
   font-size: 14px;
   border-radius: 5px;
+  flex-wrap: wrap;
 }
